<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_moring_index">
    <!-- 照片展示区 -->
    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="410dp"
                android:layout_height="310dp"
                android:gravity="center"
                android:background="@drawable/bg_gradient">
                <ImageView
                    android:id="@+id/iv_photo_top"
                    android:layout_width="400dp"
                    android:layout_height="300dp"
                    android:scaleType="fitXY"
                    android:layout_gravity="center"></ImageView>
            </LinearLayout>
        </LinearLayout>

       <FrameLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="1">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_marginLeft="20dp"
               android:layout_marginBottom="20dp"
               android:background="@drawable/bg_gradient">
           </LinearLayout>
           <ImageView
               android:id="@+id/iv_left_hand"
               android:layout_width="180dp"
               android:layout_height="240dp"
               android:layout_marginLeft="30dp"
               android:layout_marginTop="60dp"
               android:adjustViewBounds="true"
               android:maxHeight="400px"
               android:maxWidth="200px"></ImageView>
           <ImageView
               android:id="@+id/iv_eye"
               android:layout_width="180dp"
               android:layout_height="100dp"
               android:layout_marginLeft="220dp"
               android:layout_marginTop="40dp"
               android:adjustViewBounds="true"
               android:maxHeight="300px"
               android:maxWidth="200px"></ImageView>
           <ImageView
               android:id="@+id/iv_mouth"
               android:layout_width="180dp"
               android:layout_height="100dp"
               android:layout_marginLeft="220dp"
               android:layout_marginTop="170dp"
               android:adjustViewBounds="true"
               android:maxHeight="300px"
               android:maxWidth="200px"></ImageView>
           <ImageView
               android:id="@+id/iv_right_hand"
               android:layout_width="180dp"
               android:layout_height="240dp"
               android:layout_marginLeft="410dp"
               android:layout_marginTop="60dp"
               android:adjustViewBounds="true"
               android:maxHeight="400px"
               android:maxWidth="200px"></ImageView>

           <TextView
               android:id="@+id/tv_show"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="bottom"
               android:layout_marginBottom="20dp"
               android:gravity="center"
               android:text="疑似手足口病"
               android:textColor="@color/white"
               android:textSize="30sp"
               android:visibility="gone"></TextView>
       </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical"
        >

        <!-- 个人信息卡片  -->
        <LinearLayout
            android:layout_width="700dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_marginTop="40dp"
                android:layout_width="700dp"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:gravity="center">
                <LinearLayout
                    android:layout_marginLeft="10dp"
                    android:layout_width="480dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/school_icon"></ImageView>
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="60dp"
                        android:gravity="center|bottom"
                        android:textSize="35sp"
                        android:text="@string/school"></TextView>
                    <TextView
                        android:id="@+id/tv_school"
                        android:layout_width="330dp"
                        android:layout_height="60dp"
                        android:gravity="center|bottom"
                        android:textSize="35sp"></TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginLeft="10dp"
                    android:layout_width="480dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/class_icon"></ImageView>
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="60dp"
                        android:gravity="center|bottom"
                        android:textSize="35sp"
                        android:text="@string/classid"></TextView>
                    <TextView
                        android:id="@+id/tv_classname"
                        android:layout_width="330dp"
                        android:layout_height="60dp"
                        android:gravity="center|bottom"
                        android:textSize="35sp"></TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginLeft="10dp"
                    android:layout_width="480dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/name_icon"></ImageView>
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="60dp"
                        android:gravity="center|bottom"
                        android:textSize="35sp"
                        android:text="@string/name"></TextView>
                    <TextView
                        android:id="@+id/tv_stu_name"
                        android:layout_width="330dp"
                        android:layout_height="60dp"
                        android:gravity="center|bottom"
                        android:textSize="35sp"></TextView>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <!-- 晨检信息卡片  -->
        <LinearLayout
            android:layout_width="700dp"
            android:layout_height="0dp"
            android:layout_weight="2">
            <LinearLayout
                android:layout_marginLeft="120dp"
                android:layout_marginTop="40dp"
                android:layout_width="500dp"
                android:layout_height="280dp"
                android:orientation="vertical"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="500dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textSize="40sp"
                        android:text="@string/temperature"></TextView>
                    <TextView
                        android:id="@+id/tv_temperature"
                        android:layout_marginLeft="50dp"
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textSize="50sp"></TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="500dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textSize="40sp"
                        android:text="@string/eye"></TextView>
                    <RadioGroup
                        android:id="@+id/rg_eye"
                        android:layout_marginLeft="50dp"
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <RadioButton
                            android:id="@+id/rb_eye_status_normal"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/normal"
                            android:textSize="40sp"
                            android:checked="true"
                            />
                        <RadioButton
                            android:id="@+id/rb_eye_status_abnormal"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/abnormal"
                            android:textSize="40sp"
                            />
                    </RadioGroup>

                </LinearLayout>
                <LinearLayout

                    android:layout_width="500dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textSize="40sp"
                        android:text="@string/mouth"></TextView>
                    <RadioGroup
                        android:id="@+id/rg_mouth"
                        android:layout_marginLeft="50dp"
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <RadioButton
                            android:id="@+id/rb_mouth_status_normal"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/normal"
                            android:textSize="40sp"
                            android:checked="true"
                            />

                        <RadioButton
                            android:id="@+id/rb_mouth_status_abnormal"
                            android:layout_width="0dp"
                            android:layout_height="82dp"
                            android:layout_weight="1"
                            android:text="@string/abnormal"
                            android:textSize="40sp" />
                    </RadioGroup>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="500dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textSize="40sp"
                        android:text="@string/hand"></TextView>
                    <RadioGroup
                        android:id="@+id/rg_hand"
                        android:layout_marginLeft="50dp"
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <RadioButton
                            android:id="@+id/rb_hand_status_normal"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/normal"
                            android:textSize="40sp"
                            android:checked="true"
                            />
                        <RadioButton
                            android:id="@+id/rb_hand_status_abnormal"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/abnormal"
                            android:textSize="40sp"
                            />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <!-- 按钮  -->
        <LinearLayout
            android:layout_width="700dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center|top">
            <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="600dp"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv_recollect"
                        android:layout_marginLeft="20dp"
                        android:layout_width="250dp"
                        android:layout_height="80dp"
                        android:gravity="center"
                        android:background="@drawable/btn_bg"
                        android:text="重新采集"
                        android:textColor="@color/white"
                        android:textSize="40sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/tv_submit"
                        android:layout_width="250dp"
                        android:layout_height="80dp"
                        android:gravity="center"
                        android:background="@drawable/btn_bg"
                        android:text="确认上传"
                        android:textColor="@color/white"
                        android:textSize="40sp"></TextView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>